Bug 80894 - FILESAVE: Height, Width and position of vertical text (text boxes) is changed.
Summary: FILESAVE: Height, Width and position of vertical text (text boxes) is changed.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other Linux (All)
: medium normal
Assignee: Sushil Shinde
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-04 06:30 UTC by Sushil Shinde
Modified: 2014-07-17 08:26 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
This file contains verical textbox. (190.20 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-07-04 06:30 UTC, Sushil Shinde
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sushil Shinde 2014-07-04 06:30:47 UTC
Created attachment 102236 [details]
This file contains verical textbox.

Problem description: 
If attached file opened on latest libreoffice master build. Height, widht and position rendered wrongly on LO. Text from vertical text box is right but textbox in not rendered properly. It looks like textbox is converted to horizontal text box. 
Steps to reproduce:
1. Open attached file on latest master build.
2. Save file in docx format again on LO build.

Current behavior:
Textboxes are not rendered and saved properly.

Expected behavior:
Textboxes from file should be rendered ans saved properly with correct height, width and position.

              
Operating System: Ubuntu
Version: 4.4.0.0.alpha0+ Master
Comment 1 Jorendc 2014-07-04 07:53:28 UTC
Synerzip bugs -> NEW :-)
Comment 2 Cor Nouws 2014-07-04 08:10:44 UTC
Hi sushil,

thanks - do you have a pdf showing the correct output as reference?
regards,
Cor
Comment 3 Sushil Shinde 2014-07-04 08:25:41 UTC
(In reply to comment #2)
> Hi sushil,
> 
> thanks - do you have a pdf showing the correct output as reference?
> regards,
> Cor

hi Cor,
Open this file in MS Office 2010 or 2007. It should look same as it rendered on MS office or it should at least save all data properly.
If you want I can add screenshot of MS Office rendering for expected behaviour.
Comment 4 Commit Notification 2014-07-17 07:56:09 UTC
sushil_shinde committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1bdd6d2129eecda564478d494fd46d14a54b6ac5

fdo#80894 : Rotation value for textframe was missing after RT.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.